welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:43: error: not found: value serpent
		serpent();
                ^